toolchain/internal/core/analysis/testdata/valid/references_valid.vdl
enum Status {
  Active
  Disabled = "disabled"
}

const defaultStatus = Status.Active
const fallbackStatus = defaultStatus
