toolchain/internal/core/analysis/testdata/errors/enums/duplicate_name_via_spread.vdl
// @expect: E304

enum BaseStatus {
  Active
}

enum Status {
  ...BaseStatus
  Active = "active_2"
}
